with mail and excel sheet handler

--- a/DailyStatusReporter/Register.html
+++ b/DailyStatusReporter/Register.html
@@ -58,7 +58,7 @@
                         </div>
                         <div class="modal-body">
                             <form>
-                                <h2 class="modal-title">Registration Successful!</h2>
+                                <h2 class="modal-title">Registered!! Please confirm your email address by clicking on the link send to you register email address!</h2>
                             </form>
                         </div>
                         <div class="modal-footer">
